@@ -22,15 +22,20 @@ IPV6_EXT_HDRS=0
 UDP
 UDP_SRC_PORT=546
 UDP_DST_PORT=547
-UDP_LEN=58
+UDP_LEN=34
 UDP_CHECKSUM=-1
 UDP_DATA=DHCPV6
 
 DHCP6_MSG_TYPE=1
 DHCP6_TRANS_ID=0x123
-DHCP6_OP_NUM=1
+DHCP6_OP_NUM=2
 
 DHCP6_OP_CODE=1
 DHCP6_OP_LEN=6
 DHCP6_OPTION=DHCP6_CLIENT_ID
 DHCP6_CLIENT_ID=0x00030001f2e9
+
+DHCP6_OP_CODE=2
+DHCP6_OP_LEN=8
+DHCP6_OPTION=DHCP6_SERVER_ID
+DHCP6_SERVER_ID=0X0001020A0B03040C
