@@ -16,4 +16,5 @@ pgen-0.01----------------------------------------------------------------------
  * Support for DHCP6 added
  	-> dhcp6 header added
 	-> Client identifier option added
+	-> Server identifier option added
 pgen-0.02----------------------------------------------------------------------
